# todo-rs

./: .gitignore  Cargo.toml  Dockerfile.dev  LICENSE  README.md  Tiltfile  article-part-1.md  article-part-2.md  docker-compose.yml
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: config.rs
cli/src/auth/: login.rs
cred-store/: .gitignore  Cargo.toml
cred-store/src/: file-store.rs  lib.rs  traits.rs
genjwt/: Cargo.toml
genjwt/src/: main.rs
identity/: .gitignore  Cargo.toml  Dockerfile.dev  Tiltfile
identity/src/: main.rs
jwtverifier/: Cargo.toml
jwtverifier/src/: lib.rs
src/: error.rs  main.rs  object.rs  store.rs
src/auth/: claims.rs  mod.rs  token_from_header.rs  with_decoded.rs  with_jwt.rs
src/model/: todo.rs
src/models/: mod.rs
src/routes/: add_todo.rs  delete_todo.rs  get_todos.rs  mod.rs  object_handlers.rs  object_service.rs  router.rs  userinfo.rs  uuidv4_param.rs
src/storage/: memstore.rs  mod.rs  mongostore.rs  store.rs
src/store/: mod.rs  object_repository.rs
todo/: Cargo.toml  Dockerfile.dev  Tiltfile
todo/src/: config.rs  main.rs
todo/src/auth/: cache.rs  get_token.rs  login.rs  mod.rs  token_response.rs  userinfo.rs  with_decoded.rs
todo/src/commands/: command-executor.rs  context.rs  login.rs  logout.rs  mod.rs  todos-add.rs  todos-complete.rs  todos-delete.rs  todos-list.rs  todos-options.rs  todos-view.rs
todo/src/model/: mod.rs  user.rs
todo/src/routes/: get_todo.rs  mod.rs  router.rs  update_todo.rs  userinfo.rs
todo/src/storage/: mod.rs  store.rs
todo/src2/: config.rs  main.rs
(+7 files in other folders)
