[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open = "1.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
dotenv = "0.15.0"
spinners = "4.1.0"
cred-store = { path = "../cred-store" }
